# cool-car

./: CMakeLists.txt
models/: Sol_Sheath.mtl  Vazz.mtl  camelia.mtl  cartoon_car_model_.mtl  chassis.mtl  cool-car.mtl  fusca.mtl  wheel.mtl  wheels.mtl
source/: main.cpp
source/engine/: ConcreteScene.cpp  ConcreteScene.h  DrawableObject.cpp  DrawableObject.h  InterfaceObject.h  InterfaceScene.h  camera.cpp  camera.h  shader.cpp  shader.h
source/engine/actors/: StaticActor.cpp  StaticActor.h  actor.cpp  actor.h  camera.cpp  camera.h  car.cpp  car.h  chassis.cpp  chassis.h  floor.cpp  floor.h  light.cpp  light.h  wheel.cpp  wheel.h
source/engine/components/: RigidBodyComponent.cpp  RigidBodyComponent.h  component.cpp  component.h  material.cpp  material.h  texture.cpp  texture.h
source/engine/components/drawables/: DrawComponent.cpp  DrawComponent.h
source/scenes/: CarScene.cpp  CarScene.h
source/shaders/: shader.fs  shader.vs
source/utils/: OBJLoader.h  libs.h
